# dreamdisplays

./: .editorconfig.ignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: _build.yml  build.yml  release.yml
api/: README.md  build.gradle.kts
client/fabric/: build.gradle.kts
client/fabric/src/main/resources/: fabric.mod.json  quilt.mod.json
client/neoforge/: build.gradle.kts
client/neoforge/src/main/resources/: dreamdisplays.mixins.json
common/: build.gradle.kts
common/src/main/java/com/dreamdisplays/: Config.java  Config.kt  Focuser.kt  Initializer.java  Initializer.kt  Mod.java  Mod.kt
common/src/main/kotlin/com/dreamdisplays/: ClientConfig.kt  (+7 more)
common/src/main/resources/: dreamdisplays.accesswidener
core/: README.md  build.gradle.kts
core/protocol/: build.gradle.kts
core/src/main/proto/: dreamdisplays.proto
fabric/: build.gradle.kts
fabric/src/main/resources/: dreamdisplays.mixins.json  fabric.mod.json  quilt.mod.json
forge/src/main/resources/: dreamdisplays.mixins.json
gradle/: build.gradle.kts  libs.versions.toml  settings.gradle.kts
gradle/src/main/kotlin/: Chisel.kt  dreamdisplays.kotlin-conventions.gradle.kts  dreamdisplays.native-resources.gradle.kts  dreamdisplays.serialization-conventions.gradle.kts  dreamdisplays.shadow-conventions.gradle.kts
media/: README.md  build.gradle.kts
media/player/: README.md  build.gradle.kts
media/runtime/: README.md  build.gradle.kts
media/source/: README.md  build.gradle.kts
mod-common/: build.gradle.kts
mod-common/src/main/resources/: .gitignore
native/: CMakeLists.txt  Cargo.toml  README.md  build.sh
native/lav/: Cargo.toml
native/lav/src/: cache.rs  lib.rs  session.rs  surface.rs
native/src/: convert.rs  image_converter.c  lib.rs  session.rs
native/tests/: bench_convert.rs  ffmpeg_pipe.rs
neoforge/: build.gradle.kts  build.gradle.kts.ignore
neoforge/src/main/resources/: dreamdisplays.mixins.json
paper/: build.gradle.kts
paper/src/main/resources/: paper-plugin.yml
platform/: README.md
platform/client/: README.md
platform/client/common/: README.md  build.gradle.kts
platform/client/fabric/: README.md  build.gradle.kts
platform/client/neoforge/: README.md  build.gradle.kts
platform/server/: README.md  build.gradle.kts
platform/server/src/main/resources/: config.toml  paper-plugin.yml
protocol/: build.gradle.kts
protocol/src/main/proto/: dreamdisplays.proto
server/: build.gradle.kts
spigot/: build.gradle.kts
spigot/src/main/resources/: config.toml  plugin.yml
util/: README.md  build.gradle.kts
versions/: active.txt
versions/1.21.1/: gradle.properties
versions/1.21.11/: gradle.properties
versions/26.1.2/: gradle.properties
versions/26.2/: gradle.properties
versions/26.2-pre-4/: gradle.properties
versions/26.2-rc.1/: gradle.properties
versions/26.3-snapshot-1/: gradle.properties
(+1306 files in other folders)
